# Tarantool_api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  models.py  utils.py
src/routers/: __init__.py  auth.py  read.py  write.py
src/services/: __init__.py  auth.py  tarantool.py
tarantool/: tarantool.lua
tests/: test_auth.py  test_read.py  test_write.py
